# fun-with-quickcheck

./: README.md  fun-with-quickcheck.cabal
src/: TimeIntervals.hs
tests/: Tests.hs
tests/Test/: TimeIntervals.hs
